--- a/pr3/Help.resx
+++ b/pr3/Help.resx
@@ -117,8 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="label2.Text" xml:space="preserve">
+    <value>1.사용자 가이드
+-로그인 방법 : 로그인 화면에서 아이디와 비밀번호를 입력한 후 로그인 버튼을 클릭하세요.
+-정보 조회 및 수정 : 특정 학생의 학적 정보를 검색하고 수정할 수 있는 방법을 안내합니다.
+-비밀번호 변경 : "비밀번호 변경" 버튼을 눌러 새로운 비밀번호를 설정하는 과정을 설명합니다.
+-학생 추가/삭제 방법 : 학생 데이터를 추가하거나 삭제하는 방법을 설명합니다.</value>
   </data>
 </root>
