도움말, 프로그램 정보 최신화

--- a/pr3/Help.resx
+++ b/pr3/Help.resx
@@ -118,10 +118,23 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="label2.Text" xml:space="preserve">
-    <value>1.사용자 가이드
+    <value>사용자 가이드
+
 -로그인 방법 : 로그인 화면에서 아이디와 비밀번호를 입력한 후 로그인 버튼을 클릭하세요.
--정보 조회 및 수정 : 특정 학생의 학적 정보를 검색하고 수정할 수 있는 방법을 안내합니다.
--비밀번호 변경 : "비밀번호 변경" 버튼을 눌러 새로운 비밀번호를 설정하는 과정을 설명합니다.
--학생 추가/삭제 방법 : 학생 데이터를 추가하거나 삭제하는 방법을 설명합니다.</value>
+-정보 조회 및 수정 : 학생관리 탭에서 특정 학생의 학적 정보를 기업,검색하고 
+ 제어기 부분에서 등록, 수정, 삭제 합니다. 
+-비밀번호 변경 : 학생 관리 탭 상단 관리 메뉴에서 "비밀번호 변경" 눌러 "비밀번호 변경" 폼에서
+ 현재 비밀번호와 새로운 비밀번호, 새로운 비밀번호 확인에 기입후 "비밀번호 변경"을 눌러서 
+ 비밀번호 변경을 완료 합니다.
+-학생 추가 방법 : 학생 관리 탭에서 학생 데이터를 기입 후 제어기에서 "등록"합니다.
+-학생 수정/삭제 방법 : 학생 관리 탭에서 수정/삭제 하고 싶은 학생 선택 후 제어기에서 "수정/삭제"를 눌러
+ 수정/삭제를 합니다.
+-학생 검색 방법 : 학생 관리 탭에서 이름, 학번, 이메일, 주소 중 원하는 데이터 선택, 기입 후 "검색" 할 수 있습니다.
+-강의 등록 방법 : 강의 관리 탭에서 등록 하려는 강의의 학수번호, 교과목 명, 교수명, 학점, 이수구분, 수강인원, 
+ 강의 요일/시간을 기입 후 "등록"합니다.
+-강의 수정/삭제 방법 : 강의 관리 탭에서 수정/삭제 하려는 강의 선택후 "수정/삭제"를 눌러 수정/삭제 합니다.
+-성적 추가 방법 : 성적 관리 탭에서 성적을 추가하고 싶은 학생의 학번, 이름, 학년도, 학기, 과목, 중간고사, 기말고사,
+ 출석을 기입후 "추가"를 합니다.
+-성적 수정/삭제 방법 : 성적 관리 탭에서 수정/삭제 하고 싶은 성적을 선택 후 "수정/삭제"를 눌러 수정/삭제 합니다.</value>
   </data>
 </root>
